Pull a little more text out and localize it

--- a/app/views/activities/_school_level_activity_list.html.haml
+++ b/app/views/activities/_school_level_activity_list.html.haml
@@ -1,4 +1,4 @@
-%h5 Top activities:
+%h5= t('activities.school-level-listing.top-activities')
 
 - @activites.each do |activity|
   .card
@@ -10,7 +10,7 @@
       %span.badge.badge-info.float-right= activity.upvote_count
 %br
 %br
-%h5 Textbooks:
+%h5= t('activities.school-level-listing.textbooks')
 - textbook_level.each do |textbook|
   .card
     .card-body
