--- a/app/views/activities/_create_thumbs_up.html.haml
+++ b/app/views/activities/_create_thumbs_up.html.haml
@@ -1,3 +1,3 @@
 = form_for(current_user.upvotes.build, remote: true) do |f|
   = hidden_field_tag :activity_id, @activity.id
-  = f.submit "Thumbs up!", class: "btn btn-primary"
+  = f.submit t('activities.thumbs-up.submit-thumbs-up'), class: "btn btn-primary"
