--- a/app/views/activities/_thumbs_up.html.haml
+++ b/app/views/activities/_thumbs_up.html.haml
@@ -1,5 +1,5 @@
 %p 
-  Thumbs up: 
+  = t('activities.thumbs-up.thumbs-up-label')
   %span.badge.badge-info.badge-pill#thumbs-up-count= @activity.upvote_count
 #thumbs-up-voter
   - if user_signed_in?
@@ -8,5 +8,5 @@
     - else
       = render "delete_thumbs_up"
   - else
-    %p= link_to "Sign in or register to give a thumbs up!", new_user_session_path 
+    %p= link_to t('activities.thumbs-up.thumbs-up-logged-out'), new_user_session_path 
 
