--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -1,6 +1,6 @@
-- provide(:title, "ALT Activities - Home")
+- provide(:title, "ALTopedia - Home")
 
-%h1 ALT Activities
+%h1 Welcome to ALTopedia!
 
 %p This site is for finding and sharing activities and games to use in English classes. It's designed for the needs of ALTs in Japan, but we hope you'll find something useful no matter what your situation!
 
@@ -10,6 +10,6 @@
 
 %p Recent updates:
 %ul
+  %li The site is running the production version of the database! Upload your activities for general consumption!
   %li You can give a thumbs up to activities you like. Activities are displayed based on how many people like them.
   %li You can edit your profile with some basic info.
-  %li Textbooks can now be assigned to a particular school level (elementary, JHS, etc.) The landing pages for a school level will show all of the textbooks.
