--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,6 +10,6 @@
 
 %p Recent updates:
 %ul
+  %li The moderator queue separates new and edited activities, and has a few useful links.
   %li The site is running the production version of the database! Upload your activities for general consumption!
   %li You can give a thumbs up to activities you like. Activities are displayed based on how many people like them.
-  %li You can edit your profile with some basic info.
