--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -24,8 +24,7 @@
         %li.nav-item.active
           = link_to  current_user.username, current_user, class: "nav-link"
         - if current_user.admin? || current_user.moderator?
-          %li.nav-item.active
-            = link_to "Mod items: #{Activity.where(status: [:unapproved, :edited]).count}", modqueue_path, class: "badge badge-info"
+          %li.nav-item.active= link_to "Mod queue" , modqueue_path, class: "nav-link"
         %li.nav-item.active
           = link_to t('layouts.log_out'), destroy_user_session_path, method: :delete, class: "nav-link"
       - else
