--- a/app/views/site_pages/about.html.haml
+++ b/app/views/site_pages/about.html.haml
@@ -1,6 +1,11 @@
-- provide(:title, "ALT Activities - About")
+- provide(:title, "About")
 
-%h3 About
+%p ALTopedia is a site for finding and sharing activities and games to use in English classes. It's designed for the needs of ALTs in Japan, but we hope you'll find it useful in other situations too.
 
-%p This site is being built by Jake. Go to the GitHub page to learn more:
-%p= link_to "GitHub - ALT Activities", "https://github.com/HeadBeeGuy/alt-activities"
+%p Our goal for the site is to make it as easy as possible to share and discover activities. They're categorized and indexed based on their tags, so try browsing around on different tags to see what people have shared and how to tag your own activities. Activities have to be approved by our moderators, mostly to keep spam and other unproductive content from clogging up the site. It's a quick process, though, so don't let that stop you from contributing!
+
+%p The site is still in active development, with a lot more features and changes planned. We know that many teachers don't have access to the greatest computers at work, so we're trying to keep the layout simple and compatible with older browsers. Let us know if you encounter any bugs or issues!
+
+%p ALTopedia runs on the Ruby on Rails framework, and was made possible due to a wide variety of open-source software. In the spirit of education and sharing, the code that runs the site is open source as well. If you're familiar with web development and Rails in particular, you can help contribute and improve the site!
+
+%p= link_to "GitHub - ALTopedia", "https://github.com/HeadBeeGuy/alt-activities"
