--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -17,3 +17,5 @@
       %span.font-weight-bold= link_to activity.name, activity
       %span.font-weight-normal= activity.short_description
       %span.badge.badge-info.float-right= activity.upvote_count
+%br
+= paginate @activities
