Improve tag display a little

--- a/app/views/site_pages/grammar.html.haml
+++ b/app/views/site_pages/grammar.html.haml
@@ -4,6 +4,8 @@
 
 %p= link_to t('.all-tags'), all_tags_path
 
+%p This list is still quite incomplete! Please let us know if we're missing any significant grammar points, or any of the grammar points have inaccurate information.
+
 - @tags.each do |tag|
   .card
     .card-body
