--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -6,7 +6,7 @@
 
     %p Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!
   .nagajob.col-sm-12.col-md-4
-    = link_to image_tag("nagajob.jpg", class: "mw-100"), "http://www.nagajob.co.jp"
+    = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
 
 
 .row
