--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -30,4 +30,6 @@
   .card-footer
     - activity.tags.each do |tag|
       %span= link_to tag.long_name, tag, class: "badge badge-pill badge-success"
+    %p.card-text.text-center
+      %small.text-muted All content is provided under the #{link_to "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 License",  "https://creativecommons.org/licenses/by-nc-sa/4.0/"}.
     
