--- a/app/views/activities/modqueue.html.haml
+++ b/app/views/activities/modqueue.html.haml
@@ -35,6 +35,7 @@
 %ul
   %li= link_to "View all users", users_path
   -if current_user.admin?
+    %li= link_to "Write a new front page post", new_front_page_post_path
     %li= link_to "Make a new tag", new_tag_path
     %li= link_to "Make a new tag category", new_tag_category_path
   %li= link_to "Make a new textbook", new_textbook_path
