Update the sponsor image and link

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-sm-12.col-md-8
-    %h1 ALTopedia
+    %h1.display-4.text-center ALTopedia
 
     %p Find activities, games, and worksheets to use in your English classes. Share your ideas and help your fellow teachers make their classes awesome!
 
@@ -14,6 +14,7 @@
 
   .nagajob.col-sm-12.col-md-4.pt-2
     = link_to image_tag("nagajob.jpg", class: "mw-100 rounded"), "http://www.nagajob.co.jp"
+    %small= link_to "Follow on Facebook to keep an eye on job openings!", "https://www.facebook.com/Nagajobrecruit/"
 
 
 .row
